test_cases/negative/argument_mismatch_builtin.snek
export DEFAULT = Add(2);
